# learnin_cards_app

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Exeshnik.iss  MyDay.h  README.md  cmake_install.cmake  databasemanager.cpp  dayModel.cpp  daymanager.cpp  daymanager.h  daymodel.h  folder.cpp  foldermodel.h  main.cpp  main.qml  myday.cpp  oneday.cpp  oneday.h  resources.qrc  termin.cpp  termin.h  user.cpp
.qt/: QmlApp_qml.cmake  QmlApp_res.cmake  QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
.qt/deploy_qml_imports/: QmlApp-RelWithDebInfo.cmake
.qt/qml_imports/: QmlApp_build.rsp  QmlApp_conf.cmake  QmlApp_conf.rsp
.qt/rcc/: QmlApp_raw_qml_0.qrc  qmake_QmlApp.qrc
QmlApp/: QmlApp_qml_module_dir_map.qrc  qmldir  resources.qrc
QmlApp/components/: CustomButton.qml  ListOfTermins.qml  OneFolder.qml  ResultsScreen.qml
QmlApp/pages/: Auth.qml  EditDay.qml  Folder.qml  Home.qml  NewDay.qml  Register.qml
components/: ListOfAllTermins.qml  ListOfFolderTermins.qml  NewTermin.qml  OneDay.qml  OneFolder.qml  ResultWindow.qml  ResultsScreen.qml  TerminCard.qml  termin (2).qml
include/entities/: folder.h  imagesaver.h  oneday.h  termin.h  user.h
include/managers/: databasemanager.h  daymanager.h
include/models/: daymodel.h
pages/: AllTermins.qml  Auth.qml  Day.qml  Folder.qml  Home.qml  auth (2).qml  home (2).qml  newDay (2).qml
qmltypes/: QmlApp_foreign_types.txt
src/: main.cpp
src/entities/: folder.cpp  imagesaver.cpp  myday.cpp  oneday.cpp  termin.cpp  user.cpp
src/managers/: databasemanager.cpp  daymanager.cpp
src/models/: daymodel.cpp
